--- a/MyStudy/app/src/main/res/anim/in_lefttoright.xml
+++ b/MyStudy/app/src/main/res/anim/in_lefttoright.xml
@@ -3,6 +3,6 @@
     <!-- 定义从左向右进入的动画 -->
     <translate
         android:duration="500"
-        android:fromYDelta="-100%"
-        android:toYDelta="0" />
+        android:fromXDelta="-100%"
+        android:toXDelta="0" />
 </set>
