--- a/MyStudy/app/src/main/res/layout/activity_popupwindow_left.xml
+++ b/MyStudy/app/src/main/res/layout/activity_popupwindow_left.xml
@@ -2,35 +2,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-   >
+    android:background="@color/gray_tip"
+    android:orientation="vertical">
 
-    <Button
+    <TextView
         android:id="@+id/open"
-        android:paddingTop="10dp"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="打开" />
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:paddingTop="10dp"
+        android:text="近7天" />
 
-    <Button
+    <TextView
         android:id="@+id/save"
-        android:paddingTop="10dp"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="保存" />
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:paddingTop="10dp"
+        android:text="近30天" />
 
-    <Button
+    <TextView
         android:id="@+id/close"
-        android:paddingTop="10dp"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="关闭" />
-
-
-
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:paddingTop="10dp"
+        android:text="今日" />
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:gravity="center"-->
+        <!--android:textSize="45dp"-->
+        <!--android:text="班政委是流氓"-->
+        <!--/>-->
 
 </LinearLayout>
